language/move-lang/tests/move_check/dependencies/use_friend_direct.exp
error: 

   ┌── tests/move_check/dependencies/use_friend_direct.move:8:9 ───
   │
 8 │         B::b()
   │         ^^^^^^ Invalid use of module '0x2::B' in module '0x2::A'.
   ·
 8 │         B::b()
   │         ------ Using this module creates a dependency cycle: '0x2::B' is a friend of '0x2::A' uses '0x2::B'
   │

